--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1>Weekly Planner</h1>
+    </div>
+    <div class="row justify-content-center">
+      <button class="button-add-entry">Add Entry</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="modal-outer">
+      <div class="modal-content hidden">
+        <div class="row">
+          <h3>Add Content</h3>
+        </div>
+        <div class="row">
+          <select name="week-days" class="week-days-dropdown">
+            <option value="">Day Of Week</option>
+            <option value="monday">Monday</option>
+            <option value="tuesday">Tuesday</option>
+            <option value="wednesday">Wednesday</option>
+            <option value="thursday">Thursday</option>
+            <option value="friday">Friday</option>
+            <option value="saturday">Saturday</option>
+            <option value="sunday">Sunday</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
