--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week Planner</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kurenaido&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <header>
@@ -17,11 +21,11 @@
       <button class="button-add-entry">Add Entry</button>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center padding-bottom">
     <div class="modal-outer ">
       <div class="modal-content hidden">
         <div class="row justify-content-center">
-          <h3>Add Entry</h3>
+          <h1>Add Entry</h1>
         </div>
         <div class="row margin-bottom">
           <select name="week-days" class="week-days-dropdown margin-right">
@@ -35,7 +39,6 @@
             <option value="sunday">Sunday</option>
           </select>
           <input type="time">
-
         </div>
         <div class="row margin-bottom">
           <textarea class="planner-notes" placeholder="Description"></textarea>
