--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
   </div>
   <div class="row justify-content-center padding-bottom">
-    <div class="modal-outer ">
-      <div class="modal-content hidden">
+    <div class="modal-outer hidden">
+      <div class="modal-content">
         <div class="row justify-content-center">
-          <h1>Add Entry</h1>
+          <h1 class="add-entry-header">Add Entry</h1>
         </div>
         <div class="row margin-bottom">
           <select name="week-days" class="week-days-dropdown margin-right">
