--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     </div>
   </header>
   <div class="container">
+    <div class="row justify-content-space-evenly margin-bottom">
+      <button class="days-button" data-view="sunday">Sunday</button>
+      <button class="days-button" data-view="monday">Monday</button>
+      <button class="days-button" data-view="tuesday">Tuesday</button>
+      <button class="days-button" data-view="wednesday">Wednesday</button>
+      <button class="days-button" data-view="thursday">Thursday</button>
+      <button class="days-button" data-view="friday">Friday</button>
+      <button class="days-button" data-view="saturday">Saturday</button>
+    </div>
     <div class="row justify-content-center">
       <button class="button-add-entry">Add Entry</button>
     </div>
