--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <h2>Schedule Event for Monday</h2>
+  </div>
+  <div class="row">
+    <table>
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>10:00</td>
+          <td>Went to bed</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <script src="main.js"></script>
   <script src="data.js"></script>
 </body>
