created the table

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="row justify-content-center">
     <h2>Schedule Event for Monday</h2>
   </div>
-  <div class="row">
+  <div class="row justify-content-center">
     <table>
       <thead>
         <tr>
@@ -75,6 +75,34 @@
         <tr>
           <td>10:00</td>
           <td>Went to bed</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
         </tr>
       </tbody>
     </table>
