--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </header>
   <div class="container">
     <div class="row justify-content-space-evenly margin-bottom">
-      <button class="days-button" data-view="sunday">Sunday</button>
-      <button class="days-button" data-view="monday">Monday</button>
-      <button class="days-button" data-view="tuesday">Tuesday</button>
-      <button class="days-button" data-view="wednesday">Wednesday</button>
-      <button class="days-button" data-view="thursday">Thursday</button>
-      <button class="days-button" data-view="friday">Friday</button>
-      <button class="days-button" data-view="saturday">Saturday</button>
+      <button class="days-button sunday" data-view="sunday">Sunday</button>
+      <button class="days-button monday" data-view="monday">Monday</button>
+      <button class="days-button tuesday" data-view="tuesday">Tuesday</button>
+      <button class="days-button wednesday" data-view="wednesday">Wednesday</button>
+      <button class="days-button thursday" data-view="thursday">Thursday</button>
+      <button class="days-button friday" data-view="friday">Friday</button>
+      <button class="days-button saturday" data-view="saturday">Saturday</button>
     </div>
     <div class="row justify-content-center">
       <button class="button-add-entry">Add Entry</button>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="row justify-content-center">
-    <h2>Schedule Event for Monday</h2>
+    <h2 class="schedule-event-message">Schedule Event for Monday</h2>
   </div>
   <div class="row justify-content-center">
     <table>
@@ -71,7 +71,7 @@
           <th>Description</th>
         </tr>
       </thead>
-      <tbody>
+      <!-- <tbody>
         <tr>
           <td>10:00</td>
           <td>Went to bed</td>
@@ -104,7 +104,7 @@
           <td>&nbsp;</td>
           <td>&nbsp;</td>
         </tr>
-      </tbody>
+      </tbody> -->
     </table>
   </div>
   <script src="main.js"></script>
